# UK-Digital-ID-Platform

./: .env.example  .env.template  .gitignore  CONTRIBUTING.md  LICENSE  PROPOSAL_LETTER.md  README.md  README_UPDATES.md  check-system-status.sh  initialize-platform.sh  quick-start.sh  stop-platform.sh  sync-components.sh
core-id-engine/: .env.example  Cargo.toml  Dockerfile  README.md
core-id-engine/src/: api.rs  audit.rs  cache.rs  config.rs  crypto.rs  database.rs  integration.rs  lib.rs  main.rs  metrics.rs  sync.rs  verification.rs
digital-id-services/: README.md  go.mod
digital-id-services/audit/: main.go
digital-id-services/credential/: main.go
digital-id-services/degenhf/: degenhf.go
digital-id-services/gateway/: Dockerfile  main.go  main_v2.go
digital-id-services/registration/: main.go
digital-id-services/verification/: main.go
docs/: README.md  api.md  architecture.md  deployment.md  developer-guide.md  operations.md  security.md
fraud-analytics/: README.md  dashboard.py  detect_fraud.py  fraud_config.yaml  generate_data.py  requirements.txt
gov-connectors/: Dockerfile  README.md  build.gradle.kts
infra/: .env  DEPLOYMENT_COMPLETE.md  README.md  docker-compose.yml  main.tf  prometheus.yml
infra/k8s/: app-services.yaml  configmaps.yaml  core-services.yaml  data-services.yaml  go-gateway.yaml  monitoring-services.yaml  namespace.yaml  scaling-policies.yaml  secrets.yaml
infra/scripts/: deploy.sh
mobile-wallet/: README.md  pubspec.yaml
mobile-wallet/lib/: main.dart
web-portal/: .env  README.md
(+77 files in other folders)
